tests/baselines/reference/unusedPrivateVariableInClass5(strict=true).errors.txt
unusedPrivateVariableInClass5.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
unusedPrivateVariableInClass5.ts(3,13): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
unusedPrivateVariableInClass5.ts(3,13): error TS6133: 'y' is declared but its value is never read.
unusedPrivateVariableInClass5.ts(4,13): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
unusedPrivateVariableInClass5.ts(7,14): error TS2565: Property 'x' is used before being assigned.


==== unusedPrivateVariableInClass5.ts (5 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        private y: string;
                ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        public  z: string;
                ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    
        constructor() {
            this.x;
                 ~
!!! error TS2565: Property 'x' is used before being assigned.
        }
    }